tests/e2e/semantics/head_const_output3.error
Error: syntax error in story at line 2, column 18

2|           comment = res["body"]
                       ^^^^^^^^^^

E0104: `Object` can't be indexed with `body` of type `string`
