tests/e2e/semantics/head_const_output3.story
when client listen method:"post" path:"/foo" as res
       comment = res["body"]
       comment = "test"
